# cherupi-v4l2

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  awb_bayes.cpp  awb_bayes.hpp  awb_processor.cpp  awb_processor.hpp  bayer_converter.cpp  bayer_converter.h  camera.cpp  camera.hpp  camera_manager.cpp  camera_manager.hpp  checkerboard_detector.cpp  checkerboard_detector.h  command_parser.cpp  fe_configurator.cpp  fe_configurator.hpp  frame_saver.cpp  frame_saver.hpp  frame_saver_helpers.cpp  frame_sink.hpp  main.cpp  media_device.cpp  media_device.hpp  pisp_debayer.cpp  pwl.cpp  pwl.hpp  stream_manager.cpp  stream_manager.hpp  test_fe_pipeline.cpp  types.hpp  uws_frame_sink.hpp  v4l2_capture.cpp  v4l2_device.cpp  v4l2_device.hpp  websocket_server.cpp  websocket_server.hpp
docs/: websocket-protocol.md
scripts/: run_e2e.sh
src/: aruco_detector.cpp  aruco_detector.h  camera.cpp  camera.hpp  camera_manager.cpp  camera_manager.hpp  checkerboard_detector.cpp  checkerboard_detector.h  command_parser.cpp  command_parser.hpp  frame_processor.cpp  frame_processor.hpp  frame_processor_helpers.cpp  frame_processor_helpers.hpp  frame_saver.cpp  frame_saver.hpp  frame_saver_helpers.hpp  rate_controller.cpp  rate_controller.hpp  stream_manager.cpp  stream_manager.hpp  types.hpp  uws_frame_sink.hpp  websocket_server.cpp  websocket_server.hpp
tests/: CMakeLists.txt
tests/e2e/: README.md  client.py  conftest.py  requirements.txt  test_binary_protocol.py  test_disconnect.py  test_exposure.py  test_focus.py  test_frame_duration.py  test_header_only.py  test_lifecycle.py  test_protocol_abuse.py  test_save_modes.py  test_single_client.py  test_state_machine.py
tests/fixtures/: checkerboard_8x11.pgm  generate_fixtures.py  no_checkerboard.pgm
tests/hw/: camera_discovery_test.cpp  camera_frame_capture_test.cpp  camera_lifecycle_test.cpp  main.cpp
tests/unit/: aruco_detector_test.cpp  aruco_test_utils.hpp  checkerboard_detector_test.cpp  chunk_protocol_test.cpp  command_parser_test.cpp  frame_processor_helpers_test.cpp  frame_processor_modes_test.cpp  frame_saver_helpers_test.cpp  frame_saver_modes_test.cpp  main.cpp  rate_controller_test.cpp  stream_chunking_test.cpp
tools/: test_client.py  yuv420_convert.cpp
